# markitdown

./: CLAUDE.md  README.md
.github/workflows/: build-desktop.yml  build-exe.yml  pages.yml  publish-pypi.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
app/scripts/: gen_icons.py
app/src/: main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
docs/: index.html  style.css
packaging/: markitdown.spec  runner.py
